--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
 
     <script src="./script/script.js"></script>
 
+
+
+    <footer>
+        <p> &copy; Raylander Guimarães, 2021</p>
+    </footer>
 </body>
+
 
 </html>
